[package]
name = "nitro-enclave-attestation-retriever-cli"
version = "0.1.0"
authors = ["Richard Fan <richardfan1126@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
base64 = "0.13.0"
serde_bytes = "0.11"

[dependencies.nsm-driver]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"

[dependencies.nsm-io]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"
